# stagdog

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  codeql-analysis.yml
include/: interface.h  sha1.h
src/: sha1.cpp
tests/: sha1_test.cpp
